--- a/css/styles.css
+++ b/css/styles.css
@@ -180,6 +180,22 @@ a:hover {
     height: 250px;
     margin: 25px;
 }
+
+.section123 p {
+    color: white;
+    font-family:"montserrat",sans-serif;
+    flex-direction: row;
+    justify-content: center;
+    margin: 5px;
+    width: 500px;
+}
+
+.section123 li {
+    width: 400px;
+}
+.mas-vistos-semana {
+    
+}
 /*FOOTER*/
 
 footer {
