agregue assets, termine mas vistos y avance en novedades

--- a/css/styles.css
+++ b/css/styles.css
@@ -187,15 +187,39 @@ a:hover {
     flex-direction: row;
     justify-content: center;
     margin: 5px;
-    width: 500px;
+    width: 400px;
+    height: 200px;
 }
 
 .section123 li {
     width: 400px;
 }
-.mas-vistos-semana {
-    
+
+/*NOVEDADES*/
+
+.section-novedades img {
+    height: 400px;
+    width: 400px;
+    margin: 10px;
 }
+
+.section-novedades p {
+    color: white;
+    font-family:"montserrat",sans-serif;
+    flex-direction: column;
+    height: 200px;
+    width: 400px;
+    margin: 0px 10px 0px 10px;
+}
+
+.section-novedades h3 {
+    color: white;
+    font-family:"montserrat",sans-serif;
+    height: 100px;
+    width: 500px;
+    margin: 0px 10px 0px 10px;
+}
+
 /*FOOTER*/
 
 footer {
