--- a/css/styles.css
+++ b/css/styles.css
@@ -198,8 +198,8 @@ a:hover {
 /*NOVEDADES*/
 
 .section-novedades img {
-    height: 400px;
-    width: 400px;
+    height: 300px;
+    width: 300px;
     margin: 10px;
 }
 
@@ -220,12 +220,27 @@ a:hover {
     margin: 0px 10px 0px 10px;
 }
 
+/*CONTACTO*/
+
+.contacto button {
+    color: #e65d2b;
+    margin-bottom: 10px;
+}
+
+.contacto label {
+    color: white;
+}
 /*FOOTER*/
 
 footer {
-    background-color: rgba(255, 255, 255, 0.623);
+    background-color: #e65d2bea;
+    height: 80px;
 }
 
+footer a {
+    margin: 10px;
+
+}
 /*MEDIA*/
 
 @media (max-width: 1376px) {
