pasando el css a scss, termine en inicio

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,316 +1,182 @@
-@import url('https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
-
-body {
-    background-color: #141414;
+@import url("https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap");
+/*RESET*/
+* {
+  margin: 0px;
+  padding: 0px;
 }
 
-/* BARRA NAVEGACION */
-header {
-    position: sticky;
-    top: 0px;
-    left: 0px;
-    background-color: #202020;
-}
-
-.navbar-toggler {
-    background-color: #e65d2b; /* Cambia el color de fondo */
-    border: 1px solid #ffcc00; /* Cambia el color del borde */
-}
-
-
-
-.barra-nav {
-    display: flex;
-    align-items: center;
-    flex-flow: wrap;
-
-}    
-
+/*FUENTES*/
 .nombre-pagina {
-    color: #ffffff;
-    font-family:"bungee spice",sans-serif;
-    margin: 10px 10px 10px 10px;
+  font-family: "bungee spice", sans-serif;
 }
 
+/*fondo*/
+body {
+  background-color: #141414;
+}
+
+/*HEADER*/
+header {
+  position: sticky;
+  top: 0px;
+  left: 0px;
+  background-color: #202020;
+}
+
+/*LOGO*/
 .logo-header {
-    margin: 10px;
+  margin: 10px;
 }
 .logo-header img {
-    width: 70px;
-    height: 90px;  
-    transform: scale(0.8); 
+  width: 70px;
+  height: 90px;
+  transform: scale(0.8);
+}
+
+/*TITULO*/
+.nombre-pagina {
+  font-family: "bungee spice", sans-serif;
+  margin: 10px 10px 10px 10px;
+}
+
+/*menu desplegable*/
+.navbar-toggler {
+  background-color: #e65d2b;
+  border: 1px solid #ffcc00;
 }
 
 .lista-menu {
-    list-style-type: none;
-    font-family:"montserrat",sans-serif;
-    display: flex;
-    flex-flow: row;
-    margin: 0px;
+  list-style-type: none;
+  font-family: "montserrat", sans-serif;
+  display: flex;
+  flex-flow: row;
+  margin: 0px;
 }
-    
 .lista-menu li {
-    margin: 10px 10px 10px 10px;
-
+  margin: 10px 10px 10px 10px;
 }
-
-a{  
-    color: rgba(255, 255, 255, 0.788);
-    text-decoration: none;
-    font-weight: 600;
+.lista-menu li a {
+  color: #ffffff;
+  text-decoration: none;
+  font-weight: 600;
 }
-
-a:hover {
-    color: #808080;
-    font-weight:600;
+.lista-menu li a:hover {
+  color: #808080;
 }
 
 /*BARRA BUSQUEDA*/
-
 .barra-buscar {
-    width: 1000px;
-    margin: auto;
-    margin-top: 60px;
+  width: 1000px;
+  margin: auto;
+  margin-top: 60px;
 }
-
 .barra-buscar button {
-    color: #e65d2b;
+  color: #e65d2b;
 }
-/*HEADINGS*/
 
+/*HEADINGS*/
 .h2-titulos {
-    color: white;
-    font-family:"montserrat",sans-serif;
-    margin-bottom: 40px;
-    margin-top: 20px;
-    
+  color: #ffffff;
+  font-family: "montserrat", sans-serif;
+  margin-bottom: 40px;
+  margin-top: 20px;
 }
 
 .h3-titulos {
-    color: white;
-    font-family:"montserrat",sans-serif;
-    margin-top: 40px;
-}
-/* INDEX */
-
-.main-index {
-    display: flex;
-    flex-flow: row;
-    justify-content: space-evenly;
-    margin-top: 60px;
-    margin-bottom: 60px;
+  color: #ffffff;
+  font-family: "montserrat", sans-serif;
+  margin-top: 40px;
 }
 
-.section1 {
-    width: 30%;
-    text-align: center;
-}
-
-.section1 ul {
-    display: flex;
-    flex-flow: column wrap;
-}
-.libros-recomendaciones-semanales {
-    list-style-type: none;
-    display: flex;
-    flex-flow: row wrap;
-    padding: 0;
-}
-
-.libros-recomendaciones-semanales li {
-    display: flex;
-}
-.libros-recomendaciones-semanales img {
-    max-width: 150px;
-    height: 250px;
-}
-
-.libros-recomendaciones-semanales p {
-    color: white;
-    font-family:"montserrat",sans-serif;
-    flex-direction: row;
-    justify-content: center;
-    margin: 5px;
-    
-}
-
-.section2y3 {
-    display: flex;
-    flex-flow: column wrap;
-    margin: 0px 0px 0px 90px;
-    text-align: center;
-}    
-
-.libros-recien-agregados {
-    list-style-type: none;
-    display: flex;
-    flex-flow: row wrap;   
-}
-
-.libros-recien-agregados img {
-    height: 250px;
-    width: 150px;
-    margin: 5px;
-}
-
-.libros-mas-vistos {
-    list-style-type: none;
-    display: flex;
-    flex-flow: row wrap;
-}
-
-.libros-mas-vistos img {
-    width: 150px;
-    height: 250px;
-    margin: 5px;
-}
-
-/*GENEROS*/
-
-
-.generos img {
-    height: 250px;
-    width: 250px;
-}
-
-/*MAS VISTOS*/
-
-.section123 img {
-    max-width: 150px;
-    height: 250px;
-    margin: 25px;
-}
-
-.section123 p {
-    color: white;
-    font-family:"montserrat",sans-serif;
-    flex-direction: row;
-    justify-content: center;
-    margin: 5px;
-    width: 400px;
-    height: 200px;
-}
-
-.section123 li {
-    width: 400px;
-}
-
-/*NOVEDADES*/
-
-.section-novedades img {
-    height: 300px;
-    width: 300px;
-    margin: 10px;
-}
-
-.section-novedades p {
-    color: white;
-    font-family:"montserrat",sans-serif;
-    flex-direction: column;
-    height: 200px;
-    width: 400px;
-    margin: 0px 10px 0px 10px;
-}
-
-.section-novedades h3 {
-    color: white;
-    font-family:"montserrat",sans-serif;
-    height: 100px;
-    width: 500px;
-    margin: 0px 10px 0px 10px;
-}
-
-/*CONTACTO*/
-
-.contacto button {
-    color: #e65d2b;
-    margin-bottom: 10px;
-}
-
-.contacto label {
-    color: white;
-}
 /*FOOTER*/
-
 footer {
-    background-color: #e65d2bea;
-    height: 80px;
+  background-color: rgba(230, 93, 43, 0.9176470588);
+  height: 80px;
 }
-
 footer a {
-    margin: 10px;
-
+  margin: 10px;
 }
+
+/* index */
+.section1 {
+  width: 30%;
+  text-align: center;
+}
+.section1 ul {
+  display: flex;
+  flex-flow: column wrap;
+}
+.section1 li {
+  display: flex;
+}
+.section1 img {
+  height: 250px;
+  width: 150px;
+}
+.section1 p {
+  color: #ffffff;
+  font-family: "montserrat", sans-serif;
+  flex-flow: row, center;
+  margin: 5px;
+}
+
 /*MEDIA INDEX*/
-
 @media (max-width: 1376px) {
-    .main-index {
+  .main-index {
     flex-direction: column-reverse;
-    }
-    .section1 {
-        margin: 0;
-        width: 100%;
-    }
-    .section1 ul {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-evenly;
-        
-    }
-    .section1 p {
-        width: 300px;
-    }
-    .section1 li {
-        flex-flow: column wrap;
-        align-items: center;
-        width: 500px;
-
-    }
-    .section2y3 {
-        margin: 0;
-        align-items: center;
-    }
-
-    .section2y3 img {
-        margin: 40px;
-    }
+  }
+  .section1 {
+    margin: 0;
+    width: 100%;
+  }
+  .section1 ul {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+  }
+  .section1 p {
+    width: 300px;
+  }
+  .section1 li {
+    flex-flow: column wrap;
+    align-items: center;
+    width: 500px;
+  }
+  .section2y3 {
+    margin: 0;
+    align-items: center;
+  }
+  .section2y3 img {
+    margin: 40px;
+  }
 }
-
 @media (max-width: 491px) {
-    .libros-recien-agregados {
-        justify-content: center;
-        padding: 0px;
-    }
-    
-    .libros-mas-vistos {
-        justify-content: center;
-        padding: 0px;
-    }
+  .libros-recien-agregados {
+    justify-content: center;
+    padding: 0px;
+  }
+  .libros-mas-vistos {
+    justify-content: center;
+    padding: 0px;
+  }
 }
-
-
 /** BARRA BUSCAR*/
-
 @media (max-width: 575px) {
-    .barra-buscar {
-        width: auto;
-    }
-
+  .barra-buscar {
+    width: auto;
+  }
 }
-
 /** NAVBAR */
-
 @media (max-width: 500px) {
-    .lista-menu {
-        display: flex;
-        flex-direction: column;
-    }
-
+  .lista-menu {
+    display: flex;
+    flex-direction: column;
+  }
 }
-
 @media (max-width: 400px) {
-    .section123 p {
-        margin: 50px;
-    }
+  .section123 p {
+    margin: 50px;
+  }
 }
 
+/*# sourceMappingURL=styles.css.map */
