--- a/scss/layout/_inicio.scss
+++ b/scss/layout/_inicio.scss
@@ -1,29 +1,75 @@
 
+/* INDEX */
 
-
-/* index */
+.main-index {
+    display: flex;
+    flex-flow: row;
+    justify-content: space-evenly;
+    margin-top: 60px;
+    margin-bottom: 60px;
+}
 
 .section1 {
     width: 30%;
     text-align: center;
 
-    ul {
+    .libros-recomendaciones-semanales {
         display: flex;
-        flex-flow: column wrap;
+        flex-flow: row wrap;
     }
+
         li {
             display: flex;
         }
 
             img {
-                @include sizes-imagenes(250px,150px)    
+                @include sizes-imagenes(250px,150px);    
             }
 
             p {
                 color:$color-texto;
                 font-family: "montserrat",sans-serif;
-                flex-flow: row,center;
+                flex-direction: row;
+                justify-content: center;
                 margin: 5px;
             }    
     }
+
+
+
+    
+.section2y3 {
+    display: flex;
+    flex-flow: column wrap;
+    margin: 0px 0px 0px 90px;
+    text-align: center;
+
+
+    .section2 {
+        .libros-recien-agregados {
+            list-style-type: none;
+            display: flex;
+            flex-flow: row wrap;
+        }
+
+            img {
+                @include sizes-imagenes(250px,150px);
+                margin: 5px;
+            }
+
+    }
+
+    .section3 {
+        .libros-mas-vistos {
+            list-style-type: none;
+            display: flex;
+            flex-flow: row wrap;
+
+            img {
+                @include sizes-imagenes(250px,150px);
+                margin: 5px;
+            }
+        }
+    }
+}
 
