--- a/css/styles.css
+++ b/css/styles.css
@@ -98,7 +98,8 @@ header {
 
 /*FOOTER*/
 footer {
-  background-color: rgba(230, 93, 43, 0.9176470588);
+  background: #de7b0a;
+  background: linear-gradient(90deg, #de7b0a 25%, #f96a0b 50%, #de7b0a 75%);
   height: 80px;
 }
 footer a {
