arregle un margen

--- a/css/styles.css
+++ b/css/styles.css
@@ -122,6 +122,7 @@ footer a {
 .section1 .libros-recomendaciones-semanales {
   display: flex;
   flex-flow: row wrap;
+  padding-left: 0px;
 }
 .section1 li {
   display: flex;
