--- a/scss/layout/_inicio.scss
+++ b/scss/layout/_inicio.scss
@@ -16,6 +16,7 @@
     .libros-recomendaciones-semanales {
         display: flex;
         flex-flow: row wrap;
+        padding-left: 0px;
     }
 
         li {
