--- a/scss/layout/_mediaquerries.scss
+++ b/scss/layout/_mediaquerries.scss
@@ -69,7 +69,9 @@
 }
 
 @media (max-width: 400px) {
-    .section123 p {
+    .section123 li p {
+        height: 300px;
+        width: 300px;
         margin: 50px;
     }
 }
