Cambios finales, espero este todo bien

--- a/scss/layout/_general.scss
+++ b/scss/layout/_general.scss
@@ -13,7 +13,7 @@ header {
     top: 0px;
     left: 0px;
     background-color: $color-fondo-header;
-    z-index: 1000;
+    background-image: linear-gradient(to top, #202020, #252526, #2a2a2c, #2f3033, #343539, #383a3f, #3d4045, #41454b, #464b51, #4b5158, #4f585f, #545e65);    z-index: 1000;
     }
 
     /*LOGO*/
