--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,7 @@ header {
   top: 0px;
   left: 0px;
   background-color: #202020;
+  background-image: linear-gradient(to top, #202020, #252526, #2a2a2c, #2f3033, #343539, #383a3f, #3d4045, #41454b, #464b51, #4b5158, #4f585f, #545e65);
   z-index: 1000;
 }
 
